se crea lógica inicial de registracion y login

--- a/views/leyesList.ejs
+++ b/views/leyesList.ejs
@@ -10,7 +10,7 @@
 		<% leyes.forEach(element => { %>
 			<ul>
 				<li>Nombre: <%= element.type %> - <%= element.number %> - <%= element.year %></li>
-				<a href="/leyes/detail/<%= element.id %>">Ver Detalle</a>
+				<a href="/leyes/detail/<%= element.id %>">Ver Norma</a>
 			</ul>
 		<% }) %>
 		<!-- footer -->
