--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,8 +3,9 @@
 		<div class="row">
 			<div class="col-12 col-lg-4">
 				<article class="footer-data">
+					<br>
 					<i class="fas fa-credit-card"></i>
-					<h2>Pagá con tarjeta o en efectivo</h2>
+					<h2>Asociate y accedé a todo el contenido. Pagá con tarjeta o en efectivo</h2>
 					<p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre
 						es seguro!</p>
 				</article>
