--- a/views/partials/headerNavbar.ejs
+++ b/views/partials/headerNavbar.ejs
@@ -2,7 +2,7 @@
     <ul>
         <li><a href="/">Inicio</a></li>
         <li><a href="/leyes/list">Explorar</a></li>
-        <li><a href="/users">Usuarios</a></li>
+        <li><a href="/users/login">Usuarios</a></li>
         <li><a href="/leyes/create">Cargar Norma</a></li>
     </ul>
 </header>
