--- a/views/loginForm.ejs
+++ b/views/loginForm.ejs
@@ -17,20 +17,21 @@
         <div class="col-12">
             <form action="/users/login" method="POST">
                 <div class="row leyes-detail">
-                    <div class="col-12 col-md-6">
+                    <div class="form-group col-12 col-md-6">
                         <label for="email" class="form-label">Email:</label>
-						<input type="text" id="email" name="email" class="form-input">
+						<input type="text" id="email" name="email" class="form-control">
+                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                     </div>
-                    <div class="col-12 col-md-6">
+                    <div class="form-group col-12 col-md-6">
                         <label for="password" class="form-label">Contraseña:</label>
-						<input type="text" id="password" name="password" class="form-input">
+						<input type="text" id="password" name="password" class="form-control">
                     </div>
-                    <div class="col-12">
-                        <button type="submit" class="form-button">Continuar</button>
-                        <button type="reset" class="form-button">Limpiar</button>
+                    <div class="form-group col-12">
+                        <button type="submit" class="btn btn-info btn-sm">Continuar</button>
+                        <button type="reset" class="btn btn-info btn-sm">Limpiar</button>
                     </div>
-                    <div class="signup_link">
-                        No posee una cuenta? <a href="/users/register">Crear una cuenta</a>
+                    <div class="form-group signup_link">
+                        <span>No posee una cuenta?</span> <a href="/users/register">Crear una cuenta</a>
                     </div>
                 </div>
             </form>
