--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
-<footer class="main-footer">
+<footer class="main-footer bg-light">
 	<div class="container">
 		<div class="row">
-			<div class="col-12 col-lg-4">
+			<div class="">
 				<article class="footer-data">
 					<br>
 					<i class="fas fa-credit-card"></i>
