--- a/views/partials/headerNavbar.ejs
+++ b/views/partials/headerNavbar.ejs
@@ -1,8 +1,23 @@
 <header>
-    <ul>
-        <li><a href="/">Inicio</a></li>
-        <li><a href="/leyes/list">Explorar</a></li>
-        <li><a href="/users/login">Usuarios</a></li>
-        <li><a href="/leyes/create">Cargar Norma</a></li>
-    </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="/">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/leyes/list">Explorar</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/users/login">Usuarios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/leyes/create">Cargar Norma</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 </header>
