--- a/views/registerForm.ejs
+++ b/views/registerForm.ejs
@@ -17,29 +17,29 @@
         <div class="col-12">
             <form action="/users/register" method="POST">
                 <div class="row leyes-detail">
-                    <div class="col-12 col-md-6">
+                    <div class="form-group col-12 col-md-6">
                         <label for="firstName" class="form-label">Nombre:</label>
-						<input type="text" id="firstName" name="firstName" class="form-input">
+						<input type="text" id="firstName" name="firstName" class="form-control">
                     </div>
-                    <div class="col-12 col-md-6">
+                    <div class="form-group col-12 col-md-6">
                         <label for="lastName" class="form-label">Apellido:</label>
-						<input type="text" id="lastName" name="lastName" class="form-input">
+						<input type="text" id="lastName" name="lastName" class="form-control">
                     </div>
                     <!--  <div class="col-12 col-md-6">
                         <label for="avatar" class="form-label">Imagen de Perfil:</label>
                         <input type="file" id="avatar" name="avatar">
                     </div> -->
-                    <div class="col-12 col-md-6">
+                    <div class="form-group col-12 col-md-6">
                         <label for="email" class="form-label">Email:</label>
-						<input type="text" id="email" name="email" class="form-input">
+						<input type="text" id="email" name="email" class="form-control">
                     </div>
-                    <div class="col-12 col-md-6">
+                    <div class="form-group col-12 col-md-6">
                         <label for="password" class="form-label">Contraseña:</label>
-						<input type="text" id="password" name="password" class="form-input">
+						<input type="text" id="password" name="password" class="form-control">
                     </div>
-                    <div class="col-12">
-                        <button type="submit" class="form-button">Guardar</button>
-                        <button type="reset" class="form-button">Limpiar</button>
+                    <div class="form-group col-12">
+                        <button type="submit" class="btn btn-info btn-sm">Guardar</button>
+                        <button type="reset" class="btn btn-info btn-sm">Limpiar</button>
                     </div>
                 </div>
             </form>
