--- a/views/loginForm.ejs
+++ b/views/loginForm.ejs
@@ -20,11 +20,16 @@
                     <div class="form-group col-12 col-md-6">
                         <label for="email" class="form-label">Email:</label>
 						<input type="text" id="email" name="email" class="form-control">
-                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                        <% if (locals.errors && errors.email) { %>
+                            <small class="text-danger"><%= errors.email.msg %></small>
+                        <% } %>
                     </div>
                     <div class="form-group col-12 col-md-6">
                         <label for="password" class="form-label">Contraseña:</label>
 						<input type="text" id="password" name="password" class="form-control">
+                        <% if (locals.errors && errors.password) { %>
+                            <small class="text-danger"><%= errors.password.msg %></small>
+                        <% } %>
                     </div>
                     <div class="form-group col-12">
                         <button type="submit" class="btn btn-info btn-sm">Continuar</button>
