--- a/views/partials/headerNavbar.ejs
+++ b/views/partials/headerNavbar.ejs
@@ -5,18 +5,29 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="/">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/leyes/search">Buscar</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/leyes/list">Explorar</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/users/login">Usuarios</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="/leyes/create">Cargar Norma</a>
             </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="/users/login">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/users/profile">Perfil de Usuario</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/users/logout">Cerrar Sesión</a>
+            </li>
+          
           </ul>
         </div>
       </nav>
