--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,13 +3,14 @@
 <!-- Head -->
 <%- include('partials/head', {title: 'Inicio'}) %>
 	<body>
-		<h1>Leyes CABA</h1>
 		<!-- header -->
 		<%- include('partials/headerNavbar') %>
 		<!-- /header -->
-
+		<div class="container-fluid">
+			<img src="\images\main\law-icon.jpg" class="img-fluid w-100" alt="Imagen de martillo de juez">			
+		</div>
 		<!-- footer -->
 		<%- include('partials/footer') %>
 		<!-- /footer -->
-  </body>
+  	</body>
 </html>
