--- a/views/loginForm.ejs
+++ b/views/loginForm.ejs
@@ -3,7 +3,6 @@
 <!-- Head -->
 <%- include('partials/head', {title: 'Login'}) %>
 <body>
-    <h1>Leyes CABA</h1>
     <!-- header -->
     <%- include('partials/headerNavbar') %>
     <!-- /header -->
@@ -26,7 +25,7 @@
                     </div>
                     <div class="form-group col-12 col-md-6">
                         <label for="password" class="form-label">Contraseña:</label>
-						<input type="text" id="password" name="password" class="form-control">
+						<input type="password" id="password" name="password" class="form-control">
                         <% if (locals.errors && errors.password) { %>
                             <small class="text-danger"><%= errors.password.msg %></small>
                         <% } %>
