--- a/views/partials/headerNavbar.ejs
+++ b/views/partials/headerNavbar.ejs
@@ -1,9 +1,14 @@
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1>Leyes CABA</h1>
+      </div>
+    </div>
+    <nav class="navbar navbar-expand-lg navbar-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="/">Inicio</a>
