--- a/views/registerForm.ejs
+++ b/views/registerForm.ejs
@@ -3,7 +3,6 @@
 <!-- Head -->
 <%- include('partials/head', {title: 'Register'}) %>
 <body>
-    <h1>Leyes CABA</h1>
     <!-- header -->
     <%- include('partials/headerNavbar') %>
     <!-- /header -->
@@ -55,7 +54,7 @@
                     </div>
                     <div class="form-group col-12 col-md-6">
                         <label for="password" class="form-label">Contraseña:</label>
-						<input type="text" id="password" name="password" class="form-control <%= (locals.errors && errors.password) ? 'is-invalid' : null %>">
+						<input type="password" id="password" name="password" class="form-control <%= (locals.errors && errors.password) ? 'is-invalid' : null %>">
                         <% if (locals.errors && errors.password) { %>
                             <small class="text-danger"><%= errors.password.msg %></small>
                         <% } %>  
