--- a/views/partials/headerNavbar.ejs
+++ b/views/partials/headerNavbar.ejs
@@ -14,13 +14,19 @@
               <a class="nav-link" href="/">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/leyes/search">Buscar</a>
+              <a class="nav-link" href="/leyes/search">Buscar Norma</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/doctrinas/search">Buscar Doctrina</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/leyes/list">Explorar</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/leyes/create">Cargar Norma</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/doctrinas/create">Cargar Doctrina</a>
             </li>
 
             <li class="nav-item">
