--- a/views/leyes/createForm.ejs
+++ b/views/leyes/createForm.ejs
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
 <!-- Head -->
-<%- include('partials/head', {title: 'Crear'}) %>
+<%- include('../partials/head', {title: 'Crear'}) %>
 <body>
     <!-- header -->
-    <%- include('partials/headerNavbar') %>
+    <%- include('../partials/headerNavbar') %>
     <!-- /header -->
 
     <div class="container form-wrapper">
         <div class="row">
             <div class="col-12">
-                <h2 class="form-title">Formulario de carga de leyes</h2>
+                <h2 class="form-title">Formulario de Carga de Leyes</h2>
             </div>
         </div>
         <div class="col-12">
@@ -58,7 +58,7 @@
     </div>
 
     <!-- footer -->
-    <%- include('partials/footer') %>
+    <%- include('../partials/footer') %>
     <!-- /footer -->
 </body>
 </html>
