--- a/views/leyes/searchForm.ejs
+++ b/views/leyes/searchForm.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 <!-- Head -->
-<%- include('partials/head', {title: 'Búsqueda'}) %>
+<%- include('../partials/head', {title: 'Búsqueda'}) %>
 	<body>
 		<!-- header -->
-		<%- include('partials/headerNavbar') %>
+		<%- include('../partials/headerNavbar') %>
 		<!-- /header -->
 		<div class="container-fluid background-wrapper">
 			<div class="container form-wrapper">
@@ -53,7 +53,7 @@
 			</div>
 		</div>
 		<!-- footer -->
-		<%- include('partials/footer') %>
+		<%- include('../partials/footer') %>
 		<!-- /footer -->
   </body>
 </html>
