se corrige busqueda en leyes y en doctrinas

--- a/views/doctrinas/searchFormDoctrinas.ejs
+++ b/views/doctrinas/searchFormDoctrinas.ejs
@@ -10,11 +10,11 @@
 			<div class="container form-wrapper">
 				<div class="row">
 					<div class="col-12">
-						<h2 class="form-title">Busqueda de Doctrinas</h2>
+						<h2 class="form-title">Búsqueda de Doctrinas</h2>
 					</div>
 				</div>
 				<div class="col-12">
-					<form action="/doctrinas/search" method="POST">
+					<form action="/doctrinas/search/result" method="GET">
 						<div class="row">
 							<div class="form-group col-12">
 								<label for="type" class="form-label">Tipo:</label>
