--- a/views/leyes/searchForm.ejs
+++ b/views/leyes/searchForm.ejs
@@ -14,7 +14,7 @@
 					</div>
 				</div>
 				<div class="col-12">
-					<form action="/leyes/search" method="POST">
+					<form action="/leyes/search/result" method="GET">
 						<div class="row">
 							<div class="form-group col-12">
 								<label for="type" class="form-label">Tipo:</label>
