--- a/views/partials/headerNavbar.ejs
+++ b/views/partials/headerNavbar.ejs
@@ -37,27 +37,18 @@
             <li class="nav-item">
               <a class="nav-link" href="/leyes/list">Explorar</a>
             </li>
-<!--             <li class="nav-item">
-              <a class="nav-link" href="/users/login">Login</a>
-            </li> -->
-            <li class="nav-item">
-              <a class="nav-link" href="/users/profile">Perfil de Usuario</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/users/logout">Cerrar Sesión</a>
-            </li>          
-          </ul>
+
           <ul class="navbar-nav align-items-center">
             <% if (locals.isLogged) { %>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="dropUser" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link" data-toggle="dropdown" href="#" id="dropUser" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   <img src="/images/avatars/<%= locals.loggedUser.avatar %>" width="40" style="border-radius: 100%;">
                   Hi <%= locals.loggedUser.firstName %> 
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="/users/profile">My profile</a>
+                  <a class="dropdown-item" href="/users/profile">Perfil de Usuario</a>
                   <li><hr class="dropdown-divider"></li>
-                  <a class="dropdown-item" href="/users/logout">Logout</a>
+                  <a class="dropdown-item" href="/users/logout">Cerrar Sesión</a>
                 </ul>
               </li>
             <% } else { %>
