se agrega logica de administrador en navbar para mostrar accesos de configuracion solo a dicho usuario, se agrega campo admin en la tabla users para designar usuarios administradores

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,9 +13,9 @@ a {
   color: #00B7FF;
 }
 
-.jumbotron {
+.jumbotron, .card-body {
   background-color: #616060;
-  background: linear-gradient(357deg, rgba(2,0,36,1) 0%, rgba(97,96,96,1) 35%, rgba(210,210,210,1) 100%);
+  background: linear-gradient(357deg, rgba(46,46,46,255) 0%, rgba(97,96,96,1) 35%, rgba(210,210,210,1) 100%);
 }
 
 .background-wrapper .card {
