--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -9,7 +9,7 @@
 		<div class="container background-wrapper">
 			<div class="card" style="width: 18rem; margin: auto; margin-top: 1.5rem; margin-bottom: 1.5rem;">
 				<img src="/images/users/<%= user.avatar %>" class="card-img-top" alt="">
-				<div class="card-body" style="background: linear-gradient(#616060, #8c8c7c);">
+				<div class="card-body">
 					<h4>Nombre:<%- ' ' + user.firstName + ' ' + user.lastName %></h4>
 					<p class="card-text">Email: <%- user.email %></p>
 				</div>
