--- a/views/partials/headerNavbar.ejs
+++ b/views/partials/headerNavbar.ejs
@@ -17,21 +17,33 @@
               <a class="nav-link inactive" data-toggle="dropdown" href="#" role="button" aria-expanded="false">Leyes</a>
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="/leyes/search">Buscar Ley</a>
-                <a class="dropdown-item" href="/leyes/create">Cargar Ley</a>
+                <% if (locals.isLogged) { %>
+                  <% if (locals.loggedUser.admin == 1) { %>
+                    <a class="dropdown-item" href="/leyes/create">Cargar Ley</a>
+                  <% } %>
+                <% } %> 
               </div>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-expanded="false">Doctrinas</a>
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="/doctrinas/search">Buscar Doctrina</a>
-                <a class="dropdown-item" href="/doctrinas/create">Cargar Doctrina</a>
+                <% if (locals.isLogged) { %>
+                  <% if (locals.loggedUser.admin == 1) { %>
+                    <a class="dropdown-item" href="/doctrinas/create">Cargar Doctrina</a>
+                  <% } %>
+                <% } %>  
               </div>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-expanded="false">Escritos</a>
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="/escritos/search">Buscar Escrito</a>
-                <a class="dropdown-item" href="/escritos/create">Cargar Escrito</a>
+                <% if (locals.isLogged) { %>
+                  <% if (locals.loggedUser.admin == 1) { %>
+                  <a class="dropdown-item" href="/escritos/create">Cargar Escrito</a>
+                  <% } %>
+                <% } %>  
               </div>
             </li>
             <li class="nav-item">
@@ -49,13 +61,19 @@
                   <a class="dropdown-item" href="/users/profile">Perfil de Usuario</a>
                   <li><hr class="dropdown-divider"></li>
                   <a class="dropdown-item" href="/users/logout">Cerrar Sesión</a>
+                  <% if (locals.loggedUser.admin == 1) { %>
+                    <li><hr class="dropdown-divider"></li>
+                    <a class="dropdown-item" href="#">
+                        Configurar
+                    </a>
+                  <% } %>  
                 </ul>
               </li>
             <% } else { %>
-              <li class="nav-item"><a class="nav-link" href="/users/register">Register</a></li>
               <li class="nav-item"><a class="nav-link" href="/users/login">Login</a></li>
             <% } %>
           </ul>
+
         </div>
       </nav>
 </header>
