--- a/views/leyes/leyesList.ejs
+++ b/views/leyes/leyesList.ejs
@@ -8,12 +8,14 @@
 		<!-- /header -->
 		<div class="card">
 			<div class="card-body">
-				<% leyes.forEach(element => { %>
-					<ul>
-						<li>Nombre: <%= element.type %> - <%= element.number %> - <%= element.year %></li>
-						<a href="/leyes/detail/<%= element.id %>">Ver Norma</a>
-					</ul>
-				<% }) %>
+				<div class="leyesList">
+					<% leyes.forEach(element => { %>
+						<ul>
+							<li>Nombre: <%= element.type %> - <%= element.number %> - <%= element.year %></li>
+							<a href="/leyes/detail/<%= element.id %>">Ver Norma</a>
+						</ul>
+					<% }) %>
+				</div>
 			</div>
 		</div>
 		<!-- footer -->
