--- a/views/leyes/createForm.ejs
+++ b/views/leyes/createForm.ejs
@@ -45,7 +45,7 @@
                     </div>
                     <div class="form-group col-12">
                         <label for="norm" class="form-label">Adjuntar Norma</label>
-                        <input type="file" class="form-control" name="norm">
+                        <input type="file" class="form-control" name="norms" multiple>
                     </div>
                     <div class="form-group col-12">
                         <button type="submit" class="btn btn-info btn-sm">Guardar</button>
