--- a/views/loginForm.ejs
+++ b/views/loginForm.ejs
@@ -34,6 +34,10 @@
                         <button type="submit" class="btn btn-info btn-sm">Continuar</button>
                         <button type="reset" class="btn btn-info btn-sm">Limpiar</button>
                     </div>
+<!--                     <div class="form-group col-12">
+                        <label for="password" class="form-label">Recordarme</label>
+                        <input type="checkbox" id="remember" name="remember" class="">
+                    </div> -->
                     <div class="form-group signup_link">
                         <span>No posee una cuenta?</span> <a href="/users/register">Crear una cuenta</a>
                     </div>
