--- a/views/leyes/searchForm2.ejs
+++ b/views/leyes/searchForm2.ejs
@@ -40,8 +40,8 @@
 					</form>
 				</div>	
 			</div>
-			<div class="container">
-				<h3>Resultados</h3>
+			<div class="container result-list">
+				<h3>Resultados</h3>			
 				<% if (data) { %>
 					<% data.forEach(element => { %>
 						<ul>
