--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,6 +18,18 @@ a {
   background: linear-gradient(357deg, rgba(46,46,46,255) 0%, rgba(97,96,96,1) 35%, rgba(210,210,210,1) 100%);
 }
 
+.navbar {
+  background-color: #616060;
+  margin: 0;
+  padding-bottom: 1rem;
+  padding: 0;
+}
+
+#navbarNav .nav-item {
+  margin: 0 0.5rem;
+  font-size: 1.2rem;
+}
+
 .background-wrapper {
   min-height: 500px;
 }
@@ -30,16 +42,9 @@ a {
   padding: 1rem 4rem;
 }
 
-.navbar {
-  background-color: #616060;
-  margin: 0;
-  padding-bottom: 1rem;
-  padding: 0;
-}
+.result-list {
+  padding: 1rem 4rem;
 
-#navbarNav .nav-item {
-  margin: 0 0.5rem;
-  font-size: 1.2rem;
 }
 
 .leyesList {
