--- a/views/leyes/leyesEditForm.ejs
+++ b/views/leyes/leyesEditForm.ejs
@@ -14,33 +14,64 @@
             </div>
         </div>
         <div class="col-12">
-            <form action="/leyes/create" method="POST" enctype="multipart/form-data">
+            <form action="/leyes/edit/<%= ley.id %>" method="POST" enctype="multipart/form-data">
                 <div class="row leyes-detail">
                     <div class="form-group col-12 col-md-6">
                         <label for="number" class="form-label">Número:</label>
-						<input type="text" id="number" name="number" class="form-control">
+						<input type="text" id="number" name="number" class="form-control" value="<%= ley.number %>">
                     </div>
                     <div class="form-group col-12 col-md-6">
                         <label for="year" class="form-label">Año:</label>
-						<input type="text" id="year" name="year" class="form-control">
+						<input type="text" id="year" name="year" class="form-control" value="<%= ley.year %>">
                     </div>
                     <div class="form-group col-12 col-md-6">
                         <label for="type" class="form-label">Tipo de Norma:</label>
                         <select name="type" id="type" class="form-control">
-                            <option value="">Elegir opción</option>
-                            <option value="ley-ciudad">Ley Ciudad</option>
-                            <option value="ordenanza">Ordenanza</option>
-                            <option value="dictamen">Dictamen</option>
-                            <option value="resolucion">Resolución</option>
-                            <option value="disposicion">Disposición</option>
+                            <% let typeOptions = [
+                                { id: 'ley-ciudad',
+                                name: 'Ley Ciudad' },
+                                { id: 'ordenanza',
+                                name: 'Ordenanza' },
+                                { id: 'dictamen',
+                                name: 'Dictamen' },
+                                { id: 'resolucion',
+                                name: 'Resolución' },
+                                { id: 'disposicion',
+                                name: 'Disposición' }
+                            ] %>
+                            <% for( let i = 0; i < typeOptions.length; i++ ) { %>
+                                <% if (typeOptions[i].id == ley.type) { %>
+                                    <option value="<%= typeOptions[i].id %>" selected>
+                                        <%= typeOptions[i].name %> 
+                                    </option>
+                                <% } else { %>
+                                <option value="<%= typeOptions[i].id %>">
+                                    <%= typeOptions[i].name %> 
+                                </option>
+                                <% } %>
+                            <% } %>
                         </select>
                     </div>
                     <div class="form-group col-12 col-md-6">
                         <label for="status" class="form-label">Estado:</label>
                         <select name="status" id="status" class="form-control">
-                            <option value="">Elegir opción</option>
-                            <option value="vigente">Vigente</option>
-                            <option value="no-vigente">No Vigente</option>
+                            <% let statusOptions = [
+                                { id: 'vigente',
+                                name: 'Vigente' },
+                                { id: 'no-vigente',
+                                name: 'No Vigente' }
+                            ] %>
+                            <% for( let i = 0; i < statusOptions.length; i++ ) { %>
+                                <% if (statusOptions[i].id == ley.status) { %>
+                                    <option value="<%= statusOptions[i].id %>" selected>
+                                        <%= statusOptions[i].name %> 
+                                    </option>
+                                <% } else { %>
+                                <option value="<%= statusOptions[i].id %>">
+                                    <%= statusOptions[i].name %> 
+                                </option>
+                                <% } %>
+                            <% } %>
                         </select>
                     </div>
                     <div class="form-group col-12">
@@ -49,7 +80,7 @@
                     </div>
                     <div class="form-group col-12">
                         <button type="submit" class="btn btn-info btn-sm">Guardar</button>
-                        <button type="reset" class="btn btn-info btn-sm">Limpiar</button>
+                        <button type="button" class="btn btn-info btn-sm" onclick="history.back()">Cancelar</button>
                     </div>
                 </div>
             </form>
